--- a/notebooks/07-Control-Flow-Statements.ipynb
+++ b/notebooks/07-Control-Flow-Statements.ipynb
@@ -84,7 +84,7 @@
    "outputs": [],
    "source": [
     "from IPython.core.display import Image\n",
-    "Image('https://i.redd.it/f2ezpunnypa81.jpg')"
+    "Image('https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.freecodecamp.org%2Fnews%2Felse-if-in-python-python-if-statement-example-syntax%2F&psig=AOvVaw0ktgz5epwoDC_fCsFEFIU4&ust=1715181115112000&source=images&cd=vfe&opi=89978449&ved=2ahUKEwjRr4Da6fuFAxXxWUEAHU0bDzoQjRx6BAgAEBY')"
    ]
   },
   {
