--- a/notebooks/Welcome.ipynb
+++ b/notebooks/Welcome.ipynb
@@ -4,13 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Welcome to the 2023   Python Course! \n",
+    "# Welcome to the 2024   Python Course! \n",
     "\n",
     "## ARIES and Cefas\n",
     "\n",
-    "[Course website](https://ueapy.github.io/pythoncourse2023-website/programme/)\n",
+    "[Course website](https://ueapy.github.io/pythoncourse2024-website/programme/)\n",
     "\n",
-    "[Course material on github](https://github.com/ueapy/pythoncourse2023-materials)"
+    "[Course material on github](https://github.com/ueapy/pythoncourse2024-materials)"
    ]
   },
   {
@@ -30,8 +30,11 @@
     "                \n",
     "    Alice Hsu - UEA-ENV\n",
     "    Claire Beraud - Cefas\n",
+    "    Eilean Macdonald\n",
     "    Eliza Karlowska - UEA-ENV\n",
+    "    James Scott - Cefas\n",
     "    Jenny Graham - Cefas\n",
+    "    Matthew Thomas - Cefas\n",
     "    Rob McEwan - Cefas\n",
     "    Tiago Silva - Cefas\n"
    ]
