Minor updates for 2024

--- a/notebooks/13-Numpy-Intro.ipynb
+++ b/notebooks/13-Numpy-Intro.ipynb
@@ -26,7 +26,7 @@
     "  \n",
     "See more in this guide: https://www.labri.fr/perso/nrougier/from-python-to-numpy/\n",
     "\n",
-    "And if you're transitioning from Matlab, you may find this helpful: https://numpy.org/doc/stable/user/numpy-for-matlab-users.html"
+    "And if you're familiar with Matlab, you may find this helpful: https://numpy.org/doc/stable/user/numpy-for-matlab-users.html"
    ]
   },
   {
@@ -464,12 +464,9 @@
    },
    "outputs": [],
    "source": [
-    "try:\n",
-    "    a = np.array(1,2,3,4)   # WRONG, only 2 non-keyword arguments accepted\n",
-    "except TypeError as err:\n",
-    "    print(f'TypeError: {err}')\n",
+    "a = np.array(1,2,3,4)   # WRONG, only 2 non-keyword arguments accepted\n",
     "\n",
-    "# help(np.array)"
+    "#help(np.array)"
    ]
   },
   {
@@ -509,7 +506,7 @@
    },
    "outputs": [],
    "source": [
-    "np.ndarray([1,2,3,4]) #  This is not the recommended way to create arrays"
+    "np.ndarray([1,2,3,4]) #  NB. This is not the recommended way to create arrays"
    ]
   },
   {
@@ -643,7 +640,7 @@
    "outputs": [],
    "source": [
     "# a) Create array with units of seconds through the day, from 00:00 to 24:00, inclusive \n",
-    "# b) Create new arrays that still have units of seconds but have 1 minute or 1 hour intervals.\n",
+    "# b) Create new arrays that still have units of seconds but have intervals of 1 minute or 1 hour through the day.\n",
     "# (enter your code below)\n"
    ]
   },
@@ -842,7 +839,7 @@
     }
    },
    "source": [
-    "A common task is to generate a pair of 2D (or ND) arrays that represent data coordinates - useful for interpolation or mapping contours.\n",
+    "A common task can be to generate a pair of 2D (or ND) arrays that represent data coordinates - useful for interpolation or mapping contours.\n",
     "\n",
     "When orthogonal 1D coordinate arrays already exist, NumPy's `meshgrid` function is very useful:"
    ]
@@ -945,7 +942,7 @@
     "  \n",
     "* In 2D, the first dimension corresponds to rows, the second to columns. This is known as [row-major indexing](https://numpy.org/doc/stable/glossary.html#term-row-major). \n",
     "\n",
-    "* For multi-dimensional arrays, the order of axes in python follows C-style indexing. \n",
+    "* For multi-dimensional arrays, the order of axes in python follows C-style indexing, i.e., \n",
     "    * *The fastest varying dimension is the last dimension.* \n",
     "\n",
     "As a simple example, consider an array with 2 rows and 4 columns. In a row-major (or C-style) index system, values will be read in the order (from 0-7): \n",
@@ -961,7 +958,7 @@
     "```    \n",
     "This has an impact on the time taken to access each index e.g. it is quicker to access all items in the first axes. \n",
     "\n",
-    "For those who like to know more about this, a nice explanation can be found [here](https://agilescientific.com/blog/2018/12/28/what-is-the-fastest-axis-of-an-array)."
+    "For those who like to know more about this, an explanation can be found [here](https://agilescientific.com/blog/2018/12/28/what-is-the-fastest-axis-of-an-array)."
    ]
   },
   {
@@ -1300,7 +1297,7 @@
    },
    "outputs": [],
    "source": [
-    "mask = ( a % 3 == 0 ) # Where divisible by 3 (% is the modulus operator).\n",
+    "mask = ( a % 3 == 0 ) # True where divisible by 3 (% is the modulus operator).\n",
     "mask"
    ]
   },
@@ -1350,7 +1347,7 @@
    "source": [
     "---\n",
     "\n",
-    "## Copies and Views (a warning)"
+    "## A warning: Copies vs Views "
    ]
   },
   {
@@ -1420,8 +1417,8 @@
    "source": [
     "original = np.ones((4,3))\n",
     "\n",
-    "row = original[:,0]\n",
-    "row[2:] = 10 \n",
+    "row = original[2,:]\n",
+    "row[1:] = 10 \n",
     "\n",
     "print('row is now ',row)\n",
     "print('original is now \\n',original)"
@@ -1442,8 +1439,8 @@
    "source": [
     "original = np.ones((4,3))\n",
     "\n",
-    "fancy = original[[0,1,2,3],0]\n",
-    "fancy[2:] = 10 \n",
+    "fancy = original[2,[0,1,2]]\n",
+    "fancy[1:] = 10 \n",
     "\n",
     "print('fancy is now ',fancy)\n",
     "print('original is now \\n',original)"
@@ -1583,8 +1580,8 @@
    "source": [
     "print(a2d)\n",
     "print('sum  :',a2d.sum())\n",
-    "print('sum  :',a2d.sum(axis=0))\n",
-    "print('sum  :',a2d.sum(axis=1))"
+    "print('sum  :',a2d.sum(axis=0)) # sum over rows\n",
+    "print('sum  :',a2d.sum(axis=1)) # sum over columns"
    ]
   },
   {
@@ -1702,7 +1699,7 @@
     }
    },
    "source": [
-    "Consider a 4 x 5 2D array of negative integers:"
+    "Consider a 2D array of negative integers, with a shape of 4 x 5:"
    ]
   },
   {
@@ -2297,7 +2294,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.19"
   },
   "nbpresent": {
    "slides": {
