--- a/notebooks/solutions/13-Numpy-Intro-solutions.ipynb
+++ b/notebooks/solutions/13-Numpy-Intro-solutions.ipynb
@@ -30,7 +30,7 @@
    "outputs": [],
    "source": [
     "# a) Create an array with units of seconds through the day, from 00:00 to 24:00, inclusive \n",
-    "# b) Create new arrays that still have units of seconds but have 1 minute or 1 hour intervals.\n",
+    "# b) Create new arrays that still have units of seconds but have intervals of 1 minute or 1 hour through the day.\n",
     "# (enter your code below)"
    ]
   },
@@ -41,7 +41,8 @@
    "outputs": [],
    "source": [
     "# a)\n",
-    "np.arange(0,86401)\n",
+    "seconds = np.arange(0,86401)\n",
+    "print(seconds)\n",
     "# or: \n",
     "# np.linspace(0,86400,86401)"
    ]
@@ -53,8 +54,11 @@
    "outputs": [],
    "source": [
     "# b)\n",
-    "np.arange(0,86401,60) # minutes\n",
-    "np.arange(0,86401,60*60) # hours\n",
+    "minutes = np.arange(0,86401,60)\n",
+    "print(minutes)\n",
+    "\n",
+    "hours = np.arange(0,86401,60*60)\n",
+    "print(hours)\n",
     "# or: \n",
     "# np.linspace(0,86400,24*60+1) # minutes\n",
     "# np.linspace(0,86400,24+1) # hours"
@@ -184,7 +188,7 @@
     }
    },
    "source": [
-    "Consider a 4 x 5 2D array of negative integers:"
+    "Consider a 2D array of negative integers, with a shape of 4 x 5:"
    ]
   },
   {
@@ -462,7 +466,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
