Update for latest HadCRUT5 dataset (inc 2023)

--- a/notebooks/Guided-practice-Day-3.ipynb
+++ b/notebooks/Guided-practice-Day-3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
     "  1. Yearly global temperature anomaly compared to 1961-1990 baseline\n",
     "  2. Smoothed anomaly\n",
     "- Units: °C\n",
-    "- Time: 1850 - 2020 (yearly values)\n",
+    "- Time: 1850 - 2023 (yearly values)\n",
     "- Format:\n",
     "\n",
     "| Year | Anomaly | Smoothed|\n",
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,40 +85,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here..."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "b) 2020 was the 2nd warmest year on record - which year was the warmest? "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Your code here... \n",
-    "# Hint - find the maximum value? Which index contains that maximum value? "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "c) How many years since 1995 (inclusive) were the hottest on record at the time?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Your code here..."
+    "# Your code here...\n"
    ]
   },
   {
@@ -137,14 +104,14 @@
    "outputs": [],
    "source": [
     "# Your code here... \n",
-    "# Hint - create a boolean array to sample the years you are interested in?  "
+    "# Hint - create a boolean array to sample the years you are interested in?  \n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "c) How many years has the temperature anomaly exceeded 0.5C? "
+    "c) 2023 was the warmest year on record - which year was the second warmest? "
    ]
   },
   {
@@ -154,7 +121,40 @@
    "outputs": [],
    "source": [
     "# Your code here... \n",
-    "# Hint - create a boolean array to sample the years you are interested in?  "
+    "# Hint - find the maximum value before 2023? Which index contains that maximum value? \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "d) How many years has the temperature anomaly exceeded 0.5C? "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your code here... \n",
+    "# Hint - create a boolean array to sample the years you are interested in?  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "e) BONUS exercise: How many years since 1995 were the hottest on record at the time?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Your code here... no hints!"
    ]
   },
   {
@@ -168,9 +168,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The following graph is a screen shot from the [info sheet](https://sites.uea.ac.uk/documents/421974/1295957/CRU-Info-sheet-2021.pdf/4e8e6be5-2b01-44ff-a139-62e4ec79f09f) published about the dataset. \n",
+    "The following graph is a screen shot from an earlier version of the published dataset info sheet. \n",
     "\n",
-    "Let's try to recreate it!  \n",
+    "Let's try to create an updated version, to include the recent maximum in 2023. \n",
     "\n",
     "![](../figures/HadCRUT5_globtemp_infosheet.png)"
    ]
@@ -325,7 +325,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
