--- a/notebooks/solutions/Guided-practice-Day-3-Solutions.ipynb
+++ b/notebooks/solutions/Guided-practice-Day-3-Solutions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
     "  1. Yearly global temperature anomaly compared to 1961-1990 baseline\n",
     "  2. Smoothed anomaly\n",
     "- Units: °C\n",
-    "- Time: 1850 - 2020 (yearly values)\n",
+    "- Time: 1850 - 2023 (yearly values)\n",
     "- Format:\n",
     "\n",
     "| Year | Anomaly | Smoothed|\n",
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,20 +80,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "gt_year has type  <class 'numpy.ndarray'> and shape  (171,)\n",
-      "gt_anomaly has type  <class 'numpy.ndarray'> and shape  (171,)\n",
-      "gt_smooth has type  <class 'numpy.ndarray'> and shape  (171,)\n",
-      "period covered: 1850.0-2020.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"gt_year has type \", type(gt_year), \"and shape \", gt_year.shape)\n",
     "print(\"gt_anomaly has type \", type(gt_anomaly), \"and shape \", gt_anomaly.shape)\n",
@@ -107,63 +96,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "b) 2020 was the 2nd warmest year on record - which year was the warmest? "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "the warmest year was 2016, with an anomaly of +0.933 °C\n"
-     ]
-    }
-   ],
-   "source": [
-    "max_anom = np.max(gt_anomaly)\n",
-    "warmest_year = gt_year[gt_anomaly == max_anom]\n",
-    "print(f\"the warmest year was {int(warmest_year.item())}, with an anomaly of +{max_anom} °C\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "c) How many years since 1995 were the hottest on record at the time?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "7 years since 1995 were the warmest at the time: [1995, 1997, 1998, 2005, 2010, 2015, 2016]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# there are multiple ways you can approach this! \n",
-    "y_warmest = []\n",
-    "for y in np.arange(1995, endyear+1):\n",
-    "    anom_to_y = gt_anomaly[gt_year <= y]\n",
-    "    if gt_year[gt_anomaly == np.max(anom_to_y)] == y:\n",
-    "        y_warmest.append(int(y))\n",
-    "n_warmest = len(y_warmest)\n",
-    "print(f\"{n_warmest} years since 1995 were the warmest at the time: {y_warmest}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "b) The temperature anomaly data is referenced to the 1961-1990 baseline. \n",
     " * What is the mean temperature anomaly prior to 1961?\n",
     " * What is the mean temperature anomaly after 1990? "
@@ -171,19 +103,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The mean temperature anomaly is -0.28627927927927926 prior to 1961 and 0.5440666666666666 after 1990.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Your code here... \n",
     "# Hint - create a boolean array to sample the years you are interested in?  \n",
@@ -199,26 +123,60 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "c) How many years has the temperature anomaly exceeded 0.5°C? "
+    "c) 2023 was the warmest year on record - which year was the second warmest? "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "18 years exceeded a temperature anomaly of 0.5°C\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "# Hint - find the maximum value before 2023? Which index contains that maximum value? \n",
+    "max_anom = np.max(gt_anomaly[:-1])\n",
+    "second_warmest_year = gt_year[gt_anomaly == max_anom]\n",
+    "print(f\"the second warmest year was {int(second_warmest_year.item())}, with an anomaly of +{max_anom} °C\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "d) How many years has the temperature anomaly exceeded 0.5°C? "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "exceed_05_bool = gt_anomaly > 0.5\n",
     "n_years = np.sum(exceed_05_bool)\n",
     "print(f\"{n_years} years exceeded a temperature anomaly of 0.5°C\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "e) BONUS exercise: How many years since 1995 were the hottest on record at the time?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# there are multiple ways you can approach this! \n",
+    "y_warmest = []\n",
+    "for year in np.arange(1995, endyear+1):\n",
+    "    anom_to_y = gt_anomaly[gt_year <= year]\n",
+    "    if gt_year[gt_anomaly == np.max(anom_to_y)] == year:\n",
+    "        y_warmest.append(int(year))\n",
+    "n_warmest = len(y_warmest)\n",
+    "print(f\"{n_warmest} years since 1995 were the warmest at the time: {y_warmest}\")"
    ]
   },
   {
@@ -232,9 +190,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The following graph is a screen shot from the [info sheet](https://sites.uea.ac.uk/documents/421974/1295957/CRU-Info-sheet-2021.pdf/4e8e6be5-2b01-44ff-a139-62e4ec79f09f) published about the dataset. \n",
+    "The following graph is a screen shot from an earlier version of the published dataset info sheet. \n",
     "\n",
-    "Let's try to recreate it!  \n",
+    "Let's try to create an updated version, to include the recent maximum in 2023. \n",
     "\n",
     "![](../../figures/HadCRUT5_globtemp_infosheet.png)"
    ]
@@ -263,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,12 +283,12 @@
     "ax.axhline(0, c=\"#000000\")\n",
     "\n",
     "# set x axis limits\n",
-    "ax.set_xlim([1849, 2021])\n",
+    "ax.set_xlim([1849, 2024])\n",
     "\n",
     "# set locations of major and minor x axis ticks every 10/5 years\n",
-    "majorticks = np.arange(1850, 2021, 10)\n",
+    "majorticks = np.arange(1850, 2024, 10)\n",
     "ax.set_xticks(majorticks)\n",
-    "ax.set_xticks(np.arange(1855, 2016, 10), minor=True)\n",
+    "ax.set_xticks(np.arange(1855, 2024, 10), minor=True)\n",
     "\n",
     "# set minor ticks for the y axis\n",
     "ax.set_yticks(np.arange(-0.5, 1, 0.1), minor=True)\n",
@@ -343,8 +301,8 @@
     "\n",
     "# add some text in the upper left corner. use \"\\n\" for new lines. \n",
     "ax.text(0.04, 0.92,\n",
-    "        \"Global air temperature \\n\" + \"2020 anomaly +0.92$\\degree$C \\n\" +\n",
-    "        \"(2nd warmest on record) \\n\" + \"HadCRU5 Analysis\", \n",
+    "        \"Global air temperature \\n\" + f\"2023 anomaly +{np.max(gt_anomaly)}$\\degree$C \\n\" +\n",
+    "        \"(warmest on record) \\n\" + \"HadCRU5 Analysis\", \n",
     "        transform=ax.transAxes, va=\"top\", ha=\"left\");\n",
     "\n",
     "# save the figure\n",
@@ -386,7 +344,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -400,7 +358,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
