minor changes and clear output

--- a/notebooks/00-Introduction.ipynb
+++ b/notebooks/00-Introduction.ipynb
@@ -13,54 +13,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
+   "metadata": {},
    "source": [
-    "##  Brief history and some facts"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "* Created by Guido Van Rossum, which was \"Benevolent Dictator For Life\" (BDFL) until 2018 when the Python Steering Council was created\n",
-    "* Implementation started in December 1989, first published in February 1991\n",
-    "* Influenced by Modula-3, Lisp, C, and other programming languages"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "* Python 2.0 was released in 2000\n",
-    "* Major new features: garbage collection and Unicode support\n",
-    "* A move to transparency and community-driven development\n",
-    "* Python 2 was discontinued with version 2.7.18 in 2020"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "* Python 3.0 was released in 2008\n",
-    "* Update to the 'modern way' of doing things\n",
+    "## A bit of history\n",
+    "* Created by Guido Van Rossum, which was \"Benevolent Dictator For Life\" (BDFL) until 2018 when the Python Steering Council was created.\n",
+    "* Python 3.0 was released in 2008, latest version is 3.12*. We are using 3.9 in this course, but any version >3.5 should have the same behaviour for these lessons (f strings appeared in 3.6).\n",
     "* By fixing major flaws, it became backward-incompatible (a lot of Python 2 code doesn't run under Python 3)\n",
-    "* The latest version is Python 3.12 - October 2023. We are using 3.9 in this course, but any version >3.5 should have the same behaviour for these lessons (f strings appeared in 3.6)."
+    "\n",
+    "<a alt=\"First image of Black Hole\">\n",
+    "<img src=\"../figures/TimelineOfProgrammingLanguages.webp\" width=700/>\n",
+    "</a>\n",
+    "\n",
+    "Source: https://javaconceptoftheday.com/history-of-programming-languages/"
    ]
   },
   {
@@ -71,127 +35,51 @@
     }
    },
    "source": [
-    "## Python is a pragmatic language"
+    "### How is Python diferent from all these other languages?"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
+   "metadata": {},
    "source": [
-    "* Borrow ideas from elsewhere whenever it makes sense."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "* \"Things should be as simple as possible, but no simpler.\" \n",
-    "(Einstein)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "* Python as a \"glue\" language: interoperability with many interfaces, extensibility to other languages"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "* Don't fret too much about performance - plan to optimize later when needed."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "* Don't fight the environment and go with the flow."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "* Don't try for perfection because \"good enough\" is often just that."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "* (Hence) it’s okay to cut corners sometimes, especially if you can do it right later."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "skip"
-    }
-   },
-   "source": [
+    "### A pragmatic language\n",
+    "#### *Borrow ideas from elsewhere whenever it makes sense.*\n",
+    "#### *Things should be as simple as possible, but no simpler.*\n",
+    "(Einstein\n",
+    "#### *Python as a \"glue\" language: interoperability with many interfaces, extensibility to other languages*\n",
+    "#### *Don't fret too much about performance - plan to optimize later when needed.*\n",
+    "#### *Don't fight the environment and go with the flow.*\n",
+    "#### *Don't try for perfection because \"good enough\" is often just that.*\n",
+    "#### *(Hence) it’s okay to cut corners sometimes, especially if you can do it right later.*\n",
     "Source: http://python-history.blogspot.co.uk/2009/01/pythons-design-philosophy.html"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "### Zen of Python"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### \"The Zen of Python\"\n",
+    "\n",
     "    Beautiful is better than ugly.\n",
     "    Simple is better than complex.\n",
     "    Complex is better than complicated.\n",
-    "    Readability counts."
+    "    Readability counts.\n",
+    "    (...)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<img src=\"../figures/TimelineOfProgrammingLanguages.webp\" width=600/> \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Can you read this?\n",
     "```python\n",
-    "\n",
-    "# Example of Python code\n",
-    "\n",
     "n = int(input('Type a number, and its factorial will be printed: '))\n",
     "\n",
     "if n < 0:\n",
@@ -202,48 +90,21 @@
     "    factorial = factorial*i\n",
     "\n",
     "print(factorial)\n",
-    "```"
+    "```\n",
+    "\n",
+    "Unlike other languages, there are no {} or ; to structure the code. This is done by indentation (spaces from the left). "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The Zen of Python, by Tim Peters\n",
-      "\n",
-      "Beautiful is better than ugly.\n",
-      "Explicit is better than implicit.\n",
-      "Simple is better than complex.\n",
-      "Complex is better than complicated.\n",
-      "Flat is better than nested.\n",
-      "Sparse is better than dense.\n",
-      "Readability counts.\n",
-      "Special cases aren't special enough to break the rules.\n",
-      "Although practicality beats purity.\n",
-      "Errors should never pass silently.\n",
-      "Unless explicitly silenced.\n",
-      "In the face of ambiguity, refuse the temptation to guess.\n",
-      "There should be one-- and preferably only one --obvious way to do it.\n",
-      "Although that way may not be obvious at first unless you're Dutch.\n",
-      "Now is better than never.\n",
-      "Although never is often better than *right* now.\n",
-      "If the implementation is hard to explain, it's a bad idea.\n",
-      "If the implementation is easy to explain, it may be a good idea.\n",
-      "Namespaces are one honking great idea -- let's do more of those!\n"
-     ]
-    }
-   ],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "import this"
+    "### Why does code readability matter?\n",
+    "\n",
+    "The code is writen once but read many times, to:\n",
+    "- understand what is does,\n",
+    "- fix a problem,\n",
+    "- add a new feature."
    ]
   },
   {
@@ -258,13 +119,17 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
    "source": [
-    "### *Did I write this code?*\n",
-    "<a href=\"https://github.com/ReScience/ten-years](https://d2cbg94ubxgsnp.cloudfront.net/Pictures/480xAny/7/6/4/504764_tenyearschallenge_823405.png\">\n",
-    "<img src=\"https://raw.githubusercontent.com/ReScience/ten-years/master/ten-years-challenge.png\" width=400 />\n",
-    "</a>"
+    "# What happens here?\n",
+    "import this"
    ]
   },
   {
@@ -286,20 +151,7 @@
     }
    },
    "source": [
-    "Another reason that research scientists have flocked to Python (and why those that haven't should) is that\n",
-    "1. it has a lot of \"batteries already included\" and\n",
-    "2. for those that are not, there's a giant ecosystem available for use as third party modules."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "## Scientific Python ecosystem"
+    "Another reason that research scientists have flocked to Python (and why those that haven't should) is that there's a giant ecosystem available."
    ]
   },
   {
@@ -313,10 +165,32 @@
     "\n",
     "<img src=\"../figures/scipy-ecosystem.png\"  width=500/> \n",
     "\n",
+    "Due to the libraries PyTorch, TensorFlow and Keras it is very used AI, in particular Neural Networks.\n",
+    "\n",
     "### Number of Packages compared with Rust and R\n",
     "<a href=\"https://www.nature.com/articles/d41586-020-03382-2\">\n",
     "<img src=\"../figures/trend_packages.png\" width=600/>\n",
     "</a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Turning the Wheels of Science\n",
+    "\n",
+    "### First image of a Black Hole\n",
+    "\n",
+    "https://numpy.org/case-studies/blackhole-image/\n",
+    "\n",
+    "<a alt=\"First image of Black Hole\">\n",
+    "<img src=\"../figures/black_hole.png\" width=400/>\n",
+    "</a>\n",
+    "\n",
+    "\n",
+    "## Further Reading\n",
+    "* [Scientific success stories](https://www.python.org/about/success/#scientific)\n",
+    "* [\"Why Scientists Should Use Python for Scientific Computing\"](https://www.datacamp.com/community/blog/python-scientific-computing-case)"
    ]
   },
   {
@@ -342,9 +216,10 @@
    "source": [
     "### Top Languages on GitHub repositories: primed for collaboration\n",
     "\n",
-    "<a href=\"https://octoverse.github.com/2022/top-programming-languages\">\n",
-    "<img src=\"../figures/github_most_popular.png\" width=800/>\n",
+    "<a href=\"https://github.blog/wp-content/uploads/2023/11/top-programming-languages-2023.png\">\n",
+    "<img src=\"https://github.blog/wp-content/uploads/2023/11/top-programming-languages-2023.png\" width=700/>\n",
     "</a>\n",
+    "\n",
     "\n",
     "\n",
     "\n",
@@ -376,51 +251,16 @@
     "#### Most wanted laguages\n",
     "\n",
     "<a href=\"https://survey.stackoverflow.co/2022/#section-most-loved-dreaded-and-wanted-programming-scripting-and-markup-languages\">\n",
-    "<img src=\"../figures/stackoverflow_most_wanted.png\" width=300/>\n",
+    "<img src=\"../figures/stackoverflow_most_wanted.png\" height=800/>\n",
     "</a>\n",
     "\n",
     "#### Most loved vs. dreaded laguages\n",
     "\n",
     "<a href=\"https://survey.stackoverflow.co/2022/#section-most-loved-dreaded-and-wanted-programming-scripting-and-markup-languages\">\n",
-    "<img src=\"../figures/stackoverflow_most_loved.png\" width=600/>\n",
+    "<img src=\"../figures/stackoverflow_most_loved.png\" height=800/>\n",
     "</a>\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Turning the Wheels of Science\n",
-    "\n",
-    "### First image of a Black Hole\n",
-    "\n",
-    "https://numpy.org/case-studies/blackhole-image/\n",
-    "\n",
-    "<a alt=\"First image of Black Hole\">\n",
-    "<img src=\"../figures/black_hole.png\" width=400/>\n",
-    "</a>\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "skip"
-    }
-   },
-   "source": [
-    "## Further Reading\n",
-    "* [Scientific success stories](https://www.python.org/about/success/#scientific)\n",
-    "* [\"Why Scientists Should Use Python for Scientific Computing\"](https://www.datacamp.com/community/blog/python-scientific-computing-case)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -440,7 +280,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
