minor changes and clear output

--- a/notebooks/15-Working-with-datetime.ipynb
+++ b/notebooks/15-Working-with-datetime.ipynb
@@ -13,30 +13,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A combined date and time can be represented by the datetime class.\n"
+    "The *datetime.datetime* class can represent a combination of date and time."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "datetime.datetime(2022, 4, 29, 10, 47, 48, 298106)"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import datetime\n",
+    "from datetime import datetime # import the datetime class\n",
     "\n",
     "# This exact moment:\n",
-    "now = datetime.datetime.now()\n",
+    "now = datetime.now()\n",
     "now"
    ]
   },
@@ -49,23 +38,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "year: 2022\n",
-      "month: 4\n",
-      "day: 29\n",
-      "hours: 10\n",
-      "minute: 47\n",
-      "second: 48\n",
-      "microsecond: 298106\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('year:',  now.year)\n",
     "print('month:', now.month)\n",
@@ -80,24 +55,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "datetime is aware of local time and how it differs from Universal Coordinated Time (UTC)"
+    "datetime is aware of local time on the computer it is running on, and how it differs from Universal Coordinated Time (UTC)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1:00:00\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print( datetime.datetime.now() - datetime.datetime.utcnow() )"
+    "print( datetime.now() - datetime.utcnow() )"
    ]
   },
   {
@@ -115,42 +82,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "datetime.datetime(2009, 12, 31, 11, 5)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    " datetime.datetime.strptime('2009/12/31 11:05','%Y/%m/%d %H:%M')"
+    " datetime.strptime('2009/12/31 11:05','%Y/%m/%d %H:%M')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "datetime.datetime(2009, 12, 31, 11, 5, 6, 999900)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "datetime.datetime.strptime('2009/12/31T11:05:06.9999','%Y/%m/%dT%H:%M:%S.%f')"
+    "datetime.strptime('2009/12/31T11:05:06.9999','%Y/%m/%dT%H:%M:%S.%f')"
    ]
   },
   {
@@ -387,17 +332,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2022-04-29 10:47:48.298106\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(now)"
    ]
@@ -413,20 +350,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'2022/04/29___10:47:48'"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "now.strftime('%Y/%m/%d___%H:%M:%S')"
    ]
@@ -444,33 +370,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2009-11-30 12:12\n",
-      "2010-01-23 15:15\n",
-      "2010-07-01 17:59\n",
-      "2011-11-11 11:11\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "txtrecords = ['2009-11-30 12:12','2010-01-23 15:15','2010-07-01 17:59', '2011-11-11 11:11']\n",
     "\n",
-    "#your code here...\n",
+    "# Complete the code...\n",
     "\n",
-    "dt = np.array([datetime.datetime.strptime(txtrecord,'%Y-%m-%d %H:%M') for txtrecord in txtrecords])\n",
+    "informat = \n",
+    "#convert to list elements to datetime object\n",
+    "dt = np.array([datetime.strptime(txtrecord, informat) for txtrecord in txtrecords])\n",
     "\n",
-    "#convert to list elements to datetine object\n",
+    "outformat = \n",
     "for ele in dt:\n",
-    "    print( ele.strftime('%Y-%m-%d %H:%M') )\n",
-    "\n",
-    "#print elements using new format\n",
+    "    #print elements using new format\n",
     "\n"
    ]
   },
@@ -509,83 +424,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<br /> \n",
-    "<br /> \n",
-    "<br /> \n",
-    "<br /> \n",
-    "<br /> \n",
-    "<br /> \n",
-    "<br /> \n",
-    "<br /> \n",
-    "<br /> \n",
-    "<br /> \n",
-    "<br /> \n",
-    "<br /> \n",
-    "<br /> \n",
-    "<br /> \n",
-    "<br /> \n",
-    "<br /> \n",
-    "<br /> \n",
-    "<br /> \n",
-    "<br /> \n",
-    "<br /> \n",
-    "<br /> \n",
-    "<br /> \n",
-    "<br /> \n",
-    "<br /> \n",
-    "<br /> \n",
-    "<br /> \n",
-    "<br /> \n",
-    "<br /> \n",
-    "<br /> \n",
-    "<br /> \n",
-    "<br /> \n",
-    "<br /> \n",
-    "<br /> \n",
-    "<br /> \n",
-    "<br /> \n",
-    "<br /> \n",
-    "<br /> \n",
-    "<br /> \n",
-    "<br /> \n",
-    "<br /> \n",
-    "<br /> \n",
-    "learning *is* the struggle\n",
-    "<br /> \n",
-    "<br /> \n",
-    "<br /> \n",
-    "<br /> \n",
-    "<br /> \n",
-    "<br /> \n",
-    "<br /> \n",
-    "<br /> \n",
-    "<br /> \n",
-    "<br /> \n",
-    "<br /> \n",
-    "<br /> \n",
-    "<br /> \n",
-    "<br /> \n",
-    "<br /> \n",
-    "<br /> \n",
-    "<br /> \n",
-    "<br /> \n",
-    "<br /> \n",
-    "<br /> \n",
-    "<br /> \n",
-    "<br /> \n",
-    "<br /> \n",
-    "<br /> \n",
-    "<br /> \n",
-    "<br /> \n",
-    "<br /> \n",
-    "<br /> \n",
-    "<br /> "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Exercise solution"
    ]
   },
@@ -595,11 +433,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "txtrecords = ['2009-11-30 12:12','2010-01-23 15:15','2010-07-01 17:59', '2011-11-11 11:11']\n",
+    "\n",
     "# Create directives for input format\n",
     "informat = '%Y-%m-%d %H:%M'\n",
     "\n",
     "# A list comprehension is used to generate a list of datetime objects\n",
-    "dtrecords = [datetime.datetime.strptime(item, informat ) for item in txtrecords]\n",
+    "dtrecords = [datetime.strptime(item, informat ) for item in txtrecords]\n",
     "\n",
     "\n",
     "# Alternatively, using a for loop\n",
@@ -618,8 +458,15 @@
     "\n",
     "outformat = '%d-%m-%Y %a %Ih%M %p'\n",
     "for item in dtrecords:\n",
-    "    print( datetime.datetime.strftime(item,format=outformat) )"
+    "    print( datetime.strftime(item,format=outformat) )"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -638,7 +485,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
